# optic

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: CompilerSettings.cmake
src/VALfiles/: Action.cpp  Action.h  Analyser.h  Analysis.cpp  CMakeLists.txt  Cascader.h  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  Events.cpp  Events.h  Exceptions.h  FastEnvironment.h  FuncAnalysis.cpp  FuncAnalysis.h  FuncExp.cpp  FuncExp.h  GoalHypSpace.h  InstPropLinker.cpp  InstPropLinker.h  LaTeXSupport.cpp  LaTeXSupport.h  Ownership.cpp  Ownership.h  Partitions.h  Plan.cpp  Plan.h  PlanExecutionTracker.h  Polynomial.cpp  Polynomial.h  PrettyPrinter.cpp  PrettyPrinter.h  Proposition.cpp  Proposition.h  Relax.cpp  RelaxTranslator.cpp  RelaxTranslator.h  RepairAdvice.cpp  RepairAdvice.h  (+43 more)
src/VALfiles/misc/: AbstractGraph.h  CausalGraph.cpp  CausalGraph.h  DYNA.cpp  DYNATranslator.cpp  DYNATranslator.h  HowAnalyser.cpp  HowAnalyser.h  HowWhatWhenMain.cpp  LPGP.cpp  LPGPTranslator.cpp  LPGPTranslator.h  OptInterface.h  PartialPlan.cpp  PartialPlan.h  PinguPlanGenerator.cpp  PinguPlanGenerator.h  PingusTranslator.cpp  PlanRec.cpp  SASActions.cpp  SASActions.h  SearchSpace.cpp  SearchSpace.h  ToFnMain.cpp  dynaMain.cpp  graphconstruct.cpp  graphconstruct.h
src/VALfiles/parsing/: CMakeLists.txt  DebugWriteController.cpp  DebugWriteController.h  VisitController.h  WriteController.h  macros.h  parse_error.h  ptree.cpp  ptree.h  sStack.h
src/optic/: CMakeLists.txt  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.h  NNF.cpp  NNF.h  PreferenceData.h  PreferenceHandler.cpp  PreferenceHandler.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  StochasticDurations.cpp  StochasticDurations.h  (+33 more)
